--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,18 @@ version: 0.0.3
 homepage: https://github.com/djade007/latext
 
 environment:
-  sdk: '>=2.19.4 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_math_fork: ^0.6.3+1
+  flutter_math_fork:
+    git:
+      url: https://github.com/vanman98/flutter_math_fork.git
+      ref: main
+
 
 dev_dependencies:
   flutter_test:
